# agent-orchestrator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: guide.md  operations.md
examples/: basic_routing.py  bounded_autonomy.py  full_pipeline.py  goal_loop.py  memory_management.py  peer_panel.py  security_screening.py  semantic_search.py  task_graph.py
scripts/: memory-healthcheck.sh
src/agent_orchestrator/: __init__.py  authority.py  goal.py  ledger.py  memory.py  orchestrator.py  panel.py  router.py  security.py  semantic_memory.py  taskgraph.py
tests/: test_authority.py  test_goal.py  test_memory.py  test_orchestrator.py  test_panel.py  test_router.py  test_security.py  test_semantic_memory.py  test_taskgraph.py
