[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Production-grade multi-agent orchestration with intelligent model routing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Install these to connect real LLMs
litellm = ["litellm>=1.40.0"]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
