[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-orchestrator"
version = "0.2.0"
description = "Multi-agent orchestration with model routing, semantic memory, and prompt injection defense"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# LLM providers
litellm = ["litellm>=1.40.0"]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
# Semantic memory (vector store)
lancedb = ["lancedb>=0.6.0", "pyarrow>=16.0", "numpy>=1.26"]
# Full stack (everything)
all = [
    "litellm>=1.40.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "lancedb>=0.6.0",
    "pyarrow>=16.0",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

# semantic_memory uses lazily-imported optional dependencies (lancedb, pyarrow)
# that are not installed in the base dev environment. Ignore that module only.
[[tool.mypy.overrides]]
module = "agent_orchestrator.semantic_memory"
ignore_errors = true
